--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -480,6 +480,424 @@ span.finsihLesson {
   padding: 2px 5px;
 }
 
+.course-create-step-page-wrap .course-create-step-wrap {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  align-items: center;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box {
+  text-align: center;
+  position: relative;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box:before {
+  position: absolute;
+  content: "";
+  left: 58px;
+  top: 8px;
+  background-color: #E7EBFF;
+  height: 0.125rem;
+  width: 100%;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box:last-child:before {
+  width: 0;
+  height: 0;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box span.circle {
+  display: inline-block;
+  width: 1.125rem;
+  height: 1.125rem;
+  border-radius: 50%;
+  background: #fff;
+  border: 4px solid #E7EBFF;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box p {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+  margin-top: 0.4rem;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box.current span.circle {
+  border-color: #294CFF;
+  outline: #E4E7EC solid 2px;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box.current p {
+  color: #294CFF;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box.active span.circle {
+  border-color: #294CFF;
+  outline: #294CFF solid 2px;
+  background-color: #294CFF;
+  position: relative;
+  border-width: 0px;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box.active span.circle img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 2rem;
+}
+.course-create-step-page-wrap .course-create-step-wrap .step-box.active:before {
+  background-color: #294CFF;
+}
+.course-create-step-page-wrap .content-step-wrap {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 6.6rem;
+}
+.course-create-step-page-wrap .content-step-wrap .add-content-box button {
+  display: block;
+  border-radius: 0.375rem;
+  border: 2px dashed var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  padding: 1.3rem 2rem;
+  text-align: center;
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  width: 100%;
+}
+.course-create-step-page-wrap .content-step-wrap .add-content-box button i {
+  margin-right: 0.5rem;
+}
+.course-create-step-page-wrap .course-content-box {
+  border-radius: 0.375rem;
+  border: 1.5px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  padding: 0.75rem 1rem;
+  margin-bottom: 1.12rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.course-create-step-page-wrap .course-content-box .title {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.course-create-step-page-wrap .course-content-box .title .media {
+  align-items: center;
+}
+.course-create-step-page-wrap .course-content-box .title .media img {
+  margin-right: 1rem;
+}
+.course-create-step-page-wrap .course-content-box .title .media h5 {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+.course-create-step-page-wrap .course-content-box .title .media p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+}
+.course-create-step-page-wrap .course-content-box .actions button,
+.course-create-step-page-wrap .course-content-box .actions a {
+  display: inline-block;
+  margin-left: 1.12rem;
+}
+.course-create-step-page-wrap .course-content-box .actions button i,
+.course-create-step-page-wrap .course-content-box .actions a i {
+  color: #66768E;
+  font-size: 1.2rem;
+}
+.course-create-step-page-wrap .page-create-step {
+  grid-template-columns: 1fr 1fr;
+}
+.course-create-step-page-wrap .page-create-step .step-box:before {
+  left: 87px;
+}
+
+.back-next-bttns {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 2.5rem;
+}
+.back-next-bttns a {
+  margin-left: 1rem;
+  border-radius: 0.375rem;
+  border: 1px solid var(--gray-300, #D0D5DD);
+  background: var(--white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  display: inline-block;
+  padding: 0.56rem 1.06rem;
+  color: var(--gray-700, #344054);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  transition: ease-in 0.3s;
+}
+.back-next-bttns a:hover {
+  background-color: #294CFF;
+  color: #fff;
+}
+.back-next-bttns a:last-child {
+  background-color: #294CFF;
+  color: #fff;
+}
+
+.course-name-modal .modal-content {
+  border-radius: 0.75rem;
+  background: var(--white, #FFF);
+  box-shadow: 0px 8px 8px -4px rgba(16, 24, 40, 0.04), 0px 20px 24px -4px rgba(16, 24, 40, 0.1);
+  max-width: 23.1875rem;
+}
+.course-name-modal .modal-content .modal-body {
+  padding: 1.5rem;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt h5 {
+  color: var(--gray-900, #101828);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-group {
+  margin-top: 0.75rem;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-group .form-control {
+  border-radius: 0.5rem;
+  border: 1px solid var(--gray-300, #D0D5DD);
+  background: #F5F5F5;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  padding: 0.625rem 0.875rem;
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75rem;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-check {
+  margin-top: 1.59rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 0 !important;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-check .form-check-label {
+  color: var(--gray-900, #101828);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt p {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75rem;
+  margin-bottom: 1.59rem;
+  margin-top: 0.12rem;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-submit {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-cancel {
+  border-radius: 0.5rem;
+  border: 1px solid var(--gray-300, #D0D5DD);
+  background: var(--white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  padding: 0.625rem 1.125rem;
+  color: var(--gray-700, #344054);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  margin-right: 0.35rem;
+  transition: ease-in 0.3s;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-cancel:hover {
+  background-color: #294CFF;
+  color: #fff;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit {
+  border-radius: 0.5rem;
+  border: 1px solid var(--gray-300, #294CFF);
+  background: #294CFF;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  padding: 0.625rem 1.125rem;
+  color: var(--gray-700, #fff);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  margin-left: 0.35rem;
+  transition: ease-in 0.3s;
+}
+.course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit:hover {
+  background-color: #fff;
+  border-color: #D0D5DD;
+  color: #101828;
+}
+
+.page-type {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.59rem;
+}
+.page-type h6 {
+  color: var(--gray-900, #101828);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.page-type .d-flex {
+  justify-content: flex-end;
+  align-items: center;
+}
+.page-type .d-flex a {
+  display: inline-flex;
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  margin-left: 1rem;
+}
+.page-type .d-flex a img {
+  margin-right: 0.5rem;
+}
+.page-type .d-flex a.active {
+  color: #294CFF;
+}
+.page-type .d-flex a.active img {
+  filter: invert(31%) sepia(87%) saturate(6650%) hue-rotate(233deg) brightness(105%) contrast(101%);
+}
+
+.course-with-page {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+  padding: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.course-with-page .course-content-box.course-page-box {
+  border: 0;
+  border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin: 0;
+  border-radius: 0;
+}
+.course-with-page .course-content-inside.course-content-box {
+  border-radius: 0.5rem 0.5rem 0rem 0rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: var(--neutral-color-neutral-20, #F1F4F9);
+  margin: 0;
+}
+.course-with-page .add-content-box button {
+  padding-top: 0.8rem !important;
+  padding-bottom: 0.8rem !important;
+}
+
+.dropdown-menu {
+  border-radius: 0.375rem;
+  background: var(--background-light-paper, #FFF);
+  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.15), 0px 0px 2px 0px rgba(145, 158, 171, 0.15);
+  padding: 0.5rem;
+  border: 0;
+}
+.dropdown-menu li a {
+  border-radius: 0.375rem;
+}
+.dropdown-menu li a:hover {
+  background: var(--neutral-color-neutral-20, #F1F4F9);
+}
+
+.lesson-edit-form-wrap {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+  padding: 1.75rem 1.5rem;
+  margin-top: 5rem;
+}
+.lesson-edit-form-wrap h4 {
+  color: var(--gray-900, #101828);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-bottom: 1.06rem;
+}
+.lesson-edit-form-wrap #mceu_16 {
+  border-radius: 10px;
+  border-left: 1px solid var(--colors-components-divider, rgba(145, 158, 171, 0.24));
+}
+.lesson-edit-form-wrap .form-upload {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+.lesson-edit-form-wrap .form-upload label.txt {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.25rem;
+  display: block;
+  margin-bottom: 0.75rem;
+}
+.lesson-edit-form-wrap .form-upload #upload-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 0.375rem;
+  border: 2px dashed var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  padding: 0.5rem 2rem;
+  text-align: center;
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  height: 3.5rem;
+  width: 100%;
+}
+.lesson-edit-form-wrap .form-upload #upload-box i {
+  margin-right: 0.5rem;
+}
+.lesson-edit-form-wrap .form-upload span {
+  display: block;
+  color: var(--secondary, #667085);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  margin-top: 0.5rem;
+}
+.lesson-edit-form-wrap .course-page-edit-box {
+  border: 0;
+  border-bottom: 1px solid #EBEFF2;
+  margin: 0;
+}
+.lesson-edit-form-wrap .course-page-edit-box .dropdown span {
+  display: inline-block;
+  border-radius: 0.125rem;
+  border: 1px solid var(--grey-04, #CDD3D8);
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0.75rem;
+  padding: 0.2rem 0.5rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .course-title {
     padding: 1rem 0;
@@ -499,6 +917,16 @@ span.finsihLesson {
   .course-outline-wrap {
     margin-top: 2rem;
     padding: 1rem;
+  }
+  .course-create-step-page-wrap .course-create-step-wrap .step-box p {
+    font-size: 0.7rem;
+  }
+  .course-create-step-page-wrap .course-create-step-wrap .step-box:before {
+    left: 33px;
+  }
+  .course-create-step-page-wrap .content-step-wrap {
+    margin-top: 2rem;
+    width: 100%;
   }
 }
 @media (min-width: 574px) and (max-width: 767px) {
