--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -487,7 +487,8 @@ span.finsihLesson {
     }
 }
 
-.lesson-files-upload{
+.lesson-files-upload {
+
     .media2,
     .media {
         border-radius: 8px;
@@ -495,7 +496,8 @@ span.finsihLesson {
         background: var(--neutral-color-neutral-10, #F9FAFB);
         align-items: center;
         padding: 2.5rem;
-        img{
+
+        img {
             margin-right: 2rem;
         }
 
@@ -505,20 +507,21 @@ span.finsihLesson {
                 font-size: 20px;
                 font-style: normal;
                 font-weight: 700;
-                line-height: 30px; 
+                line-height: 30px;
             }
-           
+
 
             p {
-                color: var(--colors-text-light-secondary-g-600, #637381); 
+                color: var(--colors-text-light-secondary-g-600, #637381);
                 font-size: 14px;
                 font-style: normal;
                 font-weight: 400;
                 line-height: 22px;
-               a{
-                color: #02344F;
-                text-decoration: underline;
-               }
+
+                a {
+                    color: #02344F;
+                    text-decoration: underline;
+                }
             }
         }
     }
@@ -529,12 +532,12 @@ span.finsihLesson {
         margin-top: 1rem;
         position: relative;
     }
-    
+
     .uploaded-image img {
         max-width: 100%;
         border-radius: 10px;
     }
-    
+
     .close-icon {
         position: absolute;
         top: -3px;
@@ -546,15 +549,504 @@ span.finsihLesson {
         border-radius: 4px;
         padding: 2px 5px;
     }
-    
+
+}
+
+// course step create
+
+.course-create-step-page-wrap {
+    .course-create-step-wrap {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        align-items: center;
+
+        .step-box {
+            text-align: center;
+            position: relative;
+
+            &:before {
+                position: absolute;
+                content: "";
+                left: 58px;
+                top: 8px;
+                background-color: #E7EBFF;
+                height: 0.125rem;
+                width: 100%;
+            }
+
+            &:last-child {
+                &:before {
+                    width: 0;
+                    height: 0;
+                }
+            }
+
+            span.circle {
+                display: inline-block;
+                width: 1.125rem;
+                height: 1.125rem;
+                border-radius: 50%;
+                background: #fff;
+                border: 4px solid #E7EBFF;
+            }
+
+            p {
+                color: var(--neutral-color-neutral-70, #2F3A4C);
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.25rem;
+                margin-top: 0.4rem;
+            }
+
+        }
+
+        .step-box.current {
+            span.circle {
+                border-color: #294CFF;
+                outline: #E4E7EC solid 2px;
+            }
+
+            p {
+                color: #294CFF;
+            }
+
+        }
+
+        .step-box.active {
+            span.circle {
+                border-color: #294CFF;
+                outline: #294CFF solid 2px;
+                background-color: #294CFF;
+                position: relative;
+                border-width: 0px;
+
+                img {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 2rem;
+                }
+            }
+
+            &:before {
+                background-color: #294CFF;
+            }
+        }
+    }
+
+    .content-step-wrap {
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 6.6rem;
+
+        .add-content-box {
+            button {
+                display: block;
+                border-radius: 0.375rem;
+                border: 2px dashed var(--neutral-color-neutral-30, #E5ECF6);
+                background: #FFF;
+                padding: 1.3rem 2rem;
+                text-align: center;
+                color: var(--neutral-color-neutral-60, #66768E);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.5rem;
+                width: 100%;
+
+                i {
+                    margin-right: 0.5rem;
+                }
+            }
+        }
+
+
+    }
+
+    .course-content-box {
+        border-radius: 0.375rem;
+        border: 1.5px solid var(--neutral-color-neutral-30, #E5ECF6);
+        background: #FFF;
+        padding: .75rem 1rem;
+        margin-bottom: 1.12rem;
+        @include m.df(space-between);
+
+        .title {
+            @include m.df;
+
+            .media {
+                align-items: center;
+
+                img {
+                    margin-right: 1rem;
+                }
+
+                h5 {
+                    color: var(--neutral-color-neutral-70, #2F3A4C);
+                    font-size: 1rem;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 1.5rem;
+                }
+
+                p {
+                    color: var(--neutral-color-neutral-60, #66768E);
+                    font-size: 0.75rem;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.125rem;
+                }
+            }
+        }
+
+        .actions {
+
+            button,
+            a {
+                display: inline-block;
+                margin-left: 1.12rem;
+
+                i {
+                    color: #66768E;
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    }
+
+    .page-create-step {
+        grid-template-columns: 1fr 1fr;
+
+        .step-box:before {
+            left: 87px;
+        }
+    }
+}
+
+.back-next-bttns {
+    @include m.df(flex-end);
+    margin-top: 2.5rem;
+
+    a {
+        margin-left: 1rem;
+        border-radius: 0.375rem;
+        border: 1px solid var(--gray-300, #D0D5DD);
+        background: var(--white, #FFF);
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+        display: inline-block;
+        padding: .56rem 1.06rem;
+        color: var(--gray-700, #344054);
+        font-size: 0.875rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.25rem;
+        transition: ease-in .3s;
+
+        &:hover {
+            background-color: #294CFF;
+            color: #fff;
+        }
+
+        &:last-child {
+            background-color: #294CFF;
+            color: #fff;
+        }
+    }
+}
+
+.course-name-modal {
+    .modal-content {
+        border-radius: 0.75rem;
+        background: var(--white, #FFF);
+        box-shadow: 0px 8px 8px -4px rgba(16, 24, 40, 0.04), 0px 20px 24px -4px rgba(16, 24, 40, 0.10);
+        max-width: 23.1875rem;
+
+        .modal-body {
+            padding: 1.5rem;
+
+            .course-name-txt {
+                h5 {
+                    color: var(--gray-900, #101828);
+                    font-size: 1rem;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 1.75rem;
+                }
+
+                .form-group {
+                    margin-top: 0.75rem;
+
+                    .form-control {
+                        border-radius: 0.5rem;
+                        border: 1px solid var(--gray-300, #D0D5DD);
+                        background: #F5F5F5;
+                        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+                        padding: 0.625rem 0.875rem;
+                        color: var(--neutral-color-neutral-70, #2F3A4C);
+                        font-size: 0.875rem;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 1.75rem;
+                    }
+                }
+
+                .form-check {
+                    margin-top: 1.59rem;
+                    @include m.df(space-between);
+                    padding-left: 0 !important;
+
+                    .form-check-label {
+                        color: var(--gray-900, #101828);
+                        font-size: 1rem;
+                        font-style: normal;
+                        font-weight: 500;
+                        line-height: 1.75rem;
+
+                    }
+                }
+
+                p {
+                    color: var(--neutral-color-neutral-70, #2F3A4C);
+                    font-size: 0.75rem;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.75rem;
+                    margin-bottom: 1.59rem;
+                    margin-top: 0.12rem;
+                }
+
+                .form-submit {
+                    display: grid;
+                    grid-template-columns: 50% 50%;
+
+                    .btn-cancel {
+                        border-radius: 0.5rem;
+                        border: 1px solid var(--gray-300, #D0D5DD);
+                        background: var(--white, #FFF);
+                        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+                        padding: 0.625rem 1.125rem;
+                        color: var(--gray-700, #344054);
+                        font-size: 1rem;
+                        font-style: normal;
+                        font-weight: 500;
+                        line-height: 1.5rem;
+                        margin-right: 0.35rem;
+                        transition: ease-in .3s;
+
+                        &:hover {
+                            background-color: #294CFF;
+                            color: #fff;
+                        }
+                    }
+
+                    .btn-submit {
+                        border-radius: 0.5rem;
+                        border: 1px solid var(--gray-300, #294CFF);
+                        background: #294CFF;
+                        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+                        padding: 0.625rem 1.125rem;
+                        color: var(--gray-700, #fff);
+                        font-size: 1rem;
+                        font-style: normal;
+                        font-weight: 500;
+                        line-height: 1.5rem;
+                        margin-left: 0.35rem;
+                        transition: ease-in .3s;
+
+                        &:hover {
+                            background-color: #fff;
+                            border-color: #D0D5DD;
+                            color: #101828;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 
+.page-type {
+    @include m.df(space-between);
+    margin-top: 1.59rem;
 
+    h6 {
+        color: var(--gray-900, #101828);
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.75rem;
+    }
 
+    .d-flex {
+        justify-content: flex-end;
+        align-items: center;
 
+        a {
+            display: inline-flex;
+            color: var(--neutral-color-neutral-60, #66768E);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.25rem;
+            margin-left: 1rem;
 
+            img {
+                margin-right: 0.5rem;
+            }
+        }
 
+        a.active {
+            color: #294CFF;
+
+            img {
+                filter: invert(31%) sepia(87%) saturate(6650%) hue-rotate(233deg) brightness(105%) contrast(101%);
+            }
+        }
+    }
+}
+
+.course-with-page {
+    border-radius: 0.5rem;
+    border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    background: #FFF;
+    box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+    padding: 1.5rem;
+    margin-bottom: 1.5rem;
+
+    .course-content-box.course-page-box {
+        border: 0;
+        border-bottom: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        margin: 0;
+        border-radius: 0;
+    }
+
+    .course-content-inside.course-content-box {
+        border-radius: 0.5rem 0.5rem 0rem 0rem;
+        border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+        background: var(--neutral-color-neutral-20, #F1F4F9);
+        margin: 0;
+    }
+
+    .add-content-box {
+        button {
+            padding-top: 0.8rem !important;
+            padding-bottom: 0.8rem !important;
+        }
+    }
+}
+
+.dropdown-menu {
+    border-radius: 0.375rem;
+    background: var(--background-light-paper, #FFF);
+    box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.15), 0px 0px 2px 0px rgba(145, 158, 171, 0.15);
+    padding: 0.5rem;
+    border: 0;
+
+    li {
+        a {
+            border-radius: 0.375rem;
+
+            &:hover {
+                background: var(--neutral-color-neutral-20, #F1F4F9);
+            }
+        }
+    }
+}
+
+.lesson-edit-form-wrap {
+    border-radius: 0.5rem;
+    border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    background: #FFF;
+    box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+    padding: 1.75rem 1.5rem;
+    margin-top: 5rem;
+
+    h4 {
+        color: var(--gray-900, #101828);
+        font-size: 1.125rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.75rem;
+        margin-bottom: 1.06rem;
+    }
+
+    #mceu_16 {
+        border-radius: 10px;
+        border-left: 1px solid var(--colors-components-divider, rgba(145, 158, 171, 0.24));
+    }
+
+    .form-upload {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+
+        label.txt {
+            color: var(--neutral-color-neutral-70, #2F3A4C);
+            font-size: 0.875rem;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 1.25rem;
+            display: block;
+            margin-bottom: 0.75rem;
+        }
+
+        #upload-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            border-radius: 0.375rem;
+            border: 2px dashed var(--neutral-color-neutral-30, #E5ECF6);
+            background: #FFF;
+            padding: .5rem 2rem;
+            text-align: center;
+            color: var(--neutral-color-neutral-60, #66768E);
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.5rem;
+            height: 3.5rem;
+            width: 100%;
+
+            i {
+                margin-right: 0.5rem;
+            }
+        }
+
+        span {
+            display: block;
+            color: var(--secondary, #667085);
+            font-size: 0.75rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.25rem;
+            margin-top: 0.5rem;
+        }
+    }
+
+    .course-page-edit-box {
+        border: 0;
+        border-bottom: 1px solid #EBEFF2;
+        margin: 0;
+
+        .dropdown {
+            span {
+                display: inline-block;
+                border-radius: 0.125rem;
+                border: 1px solid var(--grey-04, #CDD3D8);
+                color: var(--neutral-color-neutral-70, #2F3A4C); 
+                font-size: 0.75rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 0.75rem;
+                padding: .2rem .5rem;
+            }
+        }
+    }
+}
 
 
 
@@ -592,6 +1084,19 @@ span.finsihLesson {
     .course-outline-wrap {
         margin-top: 2rem;
         padding: 1rem;
+    }
+
+    .course-create-step-page-wrap .course-create-step-wrap .step-box p {
+        font-size: .7rem;
+    }
+
+    .course-create-step-page-wrap .course-create-step-wrap .step-box:before {
+        left: 33px;
+    }
+
+    .course-create-step-page-wrap .content-step-wrap {
+        margin-top: 2rem;
+        width: 100%;
     }
 }
 
